--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asn1crypto==0.24.0
 autopep8==1.4.4
 certifi==2019.6.16
-cffi==1.12.3
+cffi>=1.12.3
 chardet==3.0.4
 cryptography==2.7
 Django==2.2.5
